--- a/src/features/landing/components/DesafiosSection.module.css
+++ b/src/features/landing/components/DesafiosSection.module.css
@@ -44,7 +44,7 @@
 }
 
 .header {
-  text-align: center;
+  text-align: left;
   margin-bottom: 64px;
 }
 
