--- a/src/features/landing/components/ModeloSection.module.css
+++ b/src/features/landing/components/ModeloSection.module.css
@@ -9,7 +9,7 @@
 
 .header {
   margin-bottom: 64px;
-  text-align: center;
+  text-align: left;
 }
 
 .badge {
